# oxidvault

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_LOG.md  LICENSE  NOTICE  README.md  expressions.txt  index.html  native_messaging.wixobj  package-lock.json  package.json  passwords.txt  privacy.md  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
.cargo/: audit.toml
.cursor/rules/: architecture-docs.mdc
.github/: SECURITY.md
.github/workflows/: fuzz.yml  security-audit.yml
browser-extension/: README.md  background.js  chrome-store-extension.id  content.js  extension.id.example  manifest.json  popup.css  popup.html  popup.js  themes.css
browser-extension/_locales/de/: messages.json
browser-extension/_locales/en/: messages.json
browser-extension/host/: com.oxidvault.app.json  com.oxidvault.app.json.example
crates/vault-core/: Cargo.toml  build.rs
crates/vault-core/src/: audit.rs  audit_export.rs  audit_secure.rs  auth.rs  compliance.rs  crypto.rs  diagnostics.rs  entry.rs  error.rs  expiry.rs  format.rs  generator.rs  lib.rs  license.rs  lock.rs  mfa.rs  os_protect.rs  path_util.rs  policy.rs  probe.rs  security_audit.rs  ssh_key_parse.rs  ssh_key_type.rs  unlock.rs  url_match.rs  vault.rs  vault_user.rs
crates/vault-core/src/policy/: admin.rs  mod.rs  password.rs
crates/vault-generator/: Cargo.toml
crates/vault-generator/src/: lib.rs
crates/vault-wasm/: Cargo.toml
crates/vault-wasm/src/: lib.rs
docs/: ADMIN_DEPLOYMENT.md  policy.json.example
fuzz/: Cargo.toml  README.md
fuzz/corpus/audit_log/: line_checkpoint  line_vault_opened
fuzz/corpus/ssh_key/: openssh_pem_skeleton  ppk_v3_skeleton  rsa_pem_header
fuzz/fuzz_targets/: audit_log.rs  ssh_key.rs  vault_format.rs
installer/: README.md
patches/printpdf/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patches/printpdf/defaultfonts/: mapping.rs
patches/printpdf/examples/assets/html/tests/: absolute-non-replaced-height-001.xht
patches/printpdf/src/: deserialize.rs  serialize.rs  shape.rs
patches/printpdf/src/wasm/: structs.rs
scripts/: build-wasm.ps1  generate-icons.mjs  native-messaging-host.ps1  register_native_host.ps1  stage-browser-extension.ps1  sync-architecture-version.mjs  sync-version.mjs  tauri-build.ps1  tauri-dev.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  git_sync.rs  idle_worker.rs  lib.rs  main.rs  native_messaging.rs  settings.rs  state.rs  system_tray.rs  window_events.rs
src-tauri/src/commands/: audit.rs  bootstrap.rs  compliance.rs  diagnostics.rs  file_dialog.rs  git_sync.rs  lock.rs  mod.rs  open_url.rs  policy.rs  reachability.rs  ssh.rs  users.rs  vault_guard.rs
src-tauri/src/git/: debug_log.rs  errors.rs  git_sync.rs  mod.rs  remote_auth.rs  ssh_keyring.rs
src-tauri/src/nm_bridge/: bridge_state.rs  bridge_token.rs  client.rs  focus.rs  framing.rs  mod.rs  protocol.rs  rate_limit.rs  server.rs  session.rs
src-tauri/src/probe/: mod.rs
src-tauri/src/ssh/: auth.rs  key_loader.rs  mod.rs
src-tauri/src/ssh/provider/: mod.rs  russh_provider.rs
src-tauri/wix/: install-native-messaging-host.ps1.in  native_messaging.wxs  native_messaging.wxs.in
src/components/: AboutModal.tsx  AppLogo.tsx  AppScreenContent.tsx  AuditLogTable.tsx  ClipboardToast.tsx  DashboardFilterBar.tsx  DeleteConfirmationModal.tsx  EmptyVaultState.tsx  EntryDetail.tsx  ExpiryBadge.tsx  GitSyncStatusIndicator.tsx  ImportModal.tsx  ImportWelcomeModal.tsx  Layout.tsx  MasterPasswordInput.tsx  MfaSetupModal.tsx  MigrateToV3Banner.tsx  MigrateToV3Modal.tsx  NewSecretModal.tsx  OnboardingModal.tsx  PasswordGenerateButton.tsx  PasswordGeneratorModal.tsx  PdfExportModal.tsx  ReachabilityDot.tsx  RotationDialog.tsx  SecretTypeIcon.tsx  SecurityDashboard.tsx  SettingsGearButton.tsx  SettingsMenu.tsx  SidebarEntryItem.tsx  SidebarEntryList.tsx  SidebarNavTab.tsx  SidebarTagFilter.tsx  SshDisconnectConfirmationModal.tsx  SshHostKeyDialogs.tsx  SshSessionStatusDot.tsx  SshTerminalModal.tsx  SshTerminalPanel.tsx  SyncButton.tsx  SystemDiagnosticsPanel.tsx  (+9 more)
src/components/app/: AppMainArea.tsx  AppVaultStatus.tsx
src/components/screens/: AuthForm.tsx  BrowserPreview.tsx  WelcomeScreen.tsx
src/components/settings/: AddUserModal.tsx  ChangeUserPasswordPanel.tsx  SettingsLockedView.tsx  SettingsView.tsx  UserManagementPanel.tsx  types.ts
src/components/ui/: GearIcon.tsx  LockIcon.tsx  ModalDialog.tsx  OverlayModal.tsx  ThemeSwatch.tsx  Toast.tsx  VaultButton.tsx  VaultLockButton.tsx
src/dashboard/: ComplianceDashboard.tsx  index.ts
src/hooks/: useAppVersionLabel.ts  useAutoLock.ts  useExtensionPrefillListener.ts  useKeyboardShortcuts.ts  useMfaRateLimit.ts  useReachabilityPolling.ts  useResizableSplit.ts  useSecureCopy.ts  useTheme.ts  useVaultLockedListener.ts
src/import/: bitwarden.ts  chrome.ts  csv.ts  index.ts  keepass.ts  onepassword.ts  roboform.ts  shared.ts  types.ts
src/lib/: appMeta.ts  auditActionVisual.ts  auditLogLabels.ts  diagnosticsLabels.ts  diagnosticsReport.ts  dialog.ts  errors.ts  expiry.ts  i18n.ts  importOffered.ts  ipc.ts  locale.ts  openWebsite.ts  passwordPolicy.ts  pdfExport.ts  revealLabels.ts  runAsync.ts  search.ts  secretFormLabels.ts  secretFormLoaders.ts  secureClipboard.ts  ssh.ts  sshKeyType.ts  sshTerminalLayout.ts  sshTerminalSession.ts  syncButtonStatus.ts  tags.ts  theme.ts  uiClasses.ts  vaultLabels.ts  vaultLockMessages.ts
src/locales/: de.json  en.json
src/styles/: globals.css
src/types/: audit.ts  auditLog.ts  compliance.ts  dashboardFilter.ts  diagnostics.ts  mfa.ts  policy.ts  reachability.ts  settings.ts  ssh.ts  vault.ts
tools/license-generator/: Cargo.toml  README.md
tools/license-generator/src/: main.rs
