[workspace]
resolver = "2"
members = ["crates/vault-core", "crates/vault-generator", "crates/vault-wasm", "src-tauri", "tools/license-generator"]

[workspace.package]
version = "2.4.2"
authors = ["Pascal Kuhn <support@oxidvault.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/caRl0oo/oxidvault"
homepage = "https://oxidvault.com"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
incremental = true
