[package]
name = "oxidvault-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vault-core = { path = "../crates/vault-core" }

[[bin]]
name = "vault_format"
path = "fuzz_targets/vault_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "audit_log"
path = "fuzz_targets/audit_log.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ssh_key"
path = "fuzz_targets/ssh_key.rs"
test = false
doc = false
bench = false
