[package]
name = "vault-generator"
description = "Shared CSPRNG password generator for OxidVault (native + WASM)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
