[package]
name = "license-generator"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
